--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
 							<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
 						</div>
 						<div class="col-xs-12 col-md-5 ">
-										<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
-					<span class="fs-lg-11 text-white font-weight-lighter">info@nomre.net</span>
+							<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
+							<span class="fs-lg-11 text-white font-weight-lighter">info@nomre.net</span>
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="col-4 d-flex justify-content-end">
 					<div class="btn-group mb-3 ">
 						<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
@@ -68,11 +68,11 @@
 						<div class="col-2 d-flex justify-content-center">
 							<ul class="nav py-profile justify-content-end">
 								<li class="nav-item dropdown">
-									<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle1"
-										role="button" aria-haspopup="true" aria-expanded="false" >
+									<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle1" role="button"
+										aria-haspopup="true" aria-expanded="false">
 										<i class="fas fa-user text-purple fs-lg-20"></i>
 									</a>
-									
+
 									<div class="dropdown-menu dropdown-menu-right ">
 										<a href="./profile.html" class="dropdown-item">Profil</a>
 										<a href="#" class="dropdown-item">Çıxış</a>
@@ -109,8 +109,7 @@
 			<hr class="bg-light">
 			<li class="my-3">
 				<i class="fas fa-bullhorn text-white mr-3 fs-sm-12 fs-lg-20"></i>
-				<a href="./profile.html"
-					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Kampaniyalar</a>
+				<a href="./profile.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Kampaniyalar</a>
 			</li>
 			<li class="my-3">
 				<i class="far fa-handshake text-white mr-3 fs-sm-12 fs-lg-20"></i>
@@ -119,7 +118,8 @@
 			</li>
 			<li class="my-3">
 				<i class="fas fa-user-md text-white mr-3 fs-sm-12 fs-lg-20"></i>
-				<a href="./vacancies.html" class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Vakansiyalar</a>
+				<a href="./vacancies.html"
+					class="text-decoration-none text-white my-5 fs-lg-20 fs-sm-12">Vakansiyalar</a>
 			</li>
 			<li class="my-3">
 				<i class="fas fa-info-circle text-white mr-3 fs-sm-12 fs-lg-20"></i>
@@ -281,11 +281,13 @@
 	<main class="container my-5 h-60vh">
 		<h2 class="text-purple">Contact</h2>
 		<div class="row my-5">
+
 			<div class="col-xs-12 col-md-6">
 
-				<h3 class="text-purple my-4">Bizimlə əlaqə saxlayın</h3>
-				<ul class="px-0" id="contact">
-					<li class="d-flex align-items-center my-3">
+				<h3 class="text-purple ">Bizimlə əlaqə saxlayın</h3>
+
+				<ul class="px-0 mt-3" id="contact">
+					<li class="d-flex align-items-center mb-3">
 						<i class="fas fa-phone-alt mr-1 font-weight-lighter fs-sm-12 "></i>
 						<a href="#" class=" text-decoration-none fs-sm-12 font-weight-lighter">+994502210176</a>
 					</li>
@@ -303,28 +305,28 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-xs-12 col-md-6 my-4">
+			<div class="col-xs-12 col-md-6 my-5">
 				<form>
 					<div class="form-row">
-					  <div class="form-group col-md-6">
-						<input type="text" class="form-control" id="inputFirstname" placeholder="Ad">
-					  </div>
-					  <div class="form-group col-md-6">
-						<input type="text" class="form-control" id="inputLastname" placeholder="Soyad">
-					  </div>
+						<div class="form-group col-md-6">
+							<input type="text" class="form-control" id="inputFirstname" placeholder="Ad">
+						</div>
+						<div class="form-group col-md-6">
+							<input type="text" class="form-control" id="inputLastname" placeholder="Soyad">
+						</div>
 					</div>
 					<div class="form-group">
-					  <input type="number" class="form-control" id="inputNumber" placeholder="Əlaqə nömrəsi">
+						<input type="number" class="form-control" id="inputNumber" placeholder="Əlaqə nömrəsi">
 					</div>
 					<div class="form-group">
-					  <input type="email" class="form-control" id="inputEmail" placeholder="Email adresi">
+						<input type="email" class="form-control" id="inputEmail" placeholder="Email adresi">
 					</div>
 					<div class="form-group">
 						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-					  </div>
-					  <button type="submit" class="btn bg-purple text-white shadow-sm rounded "
-					  style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
-				  </form>
+					</div>
+					<button type="submit" class="btn bg-purple text-white shadow-sm rounded "
+						style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
+				</form>
 			</div>
 		</div>
 
@@ -359,19 +361,23 @@
 					<ul class="" id="contact">
 						<li class="d-flex align-items-center">
 							<i class="fas fa-phone-alt mr-1 font-weight-lighter fs-sm-12 text-white "></i>
-							<a href="#" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994502210176</a>
+							<a href="#"
+								class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994502210176</a>
 						</li>
 						<li class="d-flex align-items-center">
 							<i class="fab fa-whatsapp mr-2 font-weight-lighter fs-sm-12 text-white"></i>
-							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994516606000</a>
+							<a href=""
+								class="text-white text-decoration-none fs-sm-12 font-weight-lighter">+994516606000</a>
 						</li>
 						<li class="d-flex align-items-center">
 							<i class="far fa-calendar mr-2 font-weight-lighter fs-sm-12 text-white"></i>
-							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">994.55.123.67</a>
+							<a href=""
+								class="text-white text-decoration-none fs-sm-12 font-weight-lighter">994.55.123.67</a>
 						</li>
 						<li class="d-flex align-items-center">
 							<i class="far fa-envelope mr-2 font-weight-lighter fs-sm-12 text-white"></i>
-							<a href="" class="text-white text-decoration-none fs-sm-12 font-weight-lighter">info@nomre.net</a>
+							<a href=""
+								class="text-white text-decoration-none fs-sm-12 font-weight-lighter">info@nomre.net</a>
 						</li>
 					</ul>
 				</div>
@@ -476,7 +482,7 @@
 				});
 			});
 		}
-		
+
 		$("#clickbutton").click(function () {
 			const me = $(this);
 			const myModal = me.closest('.modal');
