--- a/index.html
+++ b/index.html
@@ -624,14 +624,13 @@
 							<td class="text-center">1200AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
 							<td class="">
-								<div class="item ">
-									<a href="./ads.html" class="effect-border ">Reklam et</a>
-								</div>
+								<a href="./ads.html" class="text-decoration-none text-info effect-border ">Reklam
+									et</a>
 
 							</td>
 							<td class="">
 								<div class="item button-jittery">
-									<a href="./order.html" type="button">İndi al</a>
+									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
 						</tr>
@@ -659,8 +658,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view bg-grey-dark">
@@ -700,8 +700,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -727,8 +728,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -755,8 +757,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -791,8 +794,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -818,8 +822,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -845,8 +850,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view bg-grey-dark">
@@ -877,8 +883,9 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 						<tr class="desktop-view">
@@ -905,8 +912,9 @@
 									et</a>
 							</td>
 							<td class="">
-								<div class="item button-jittery"><a href="./order.html" class="text-decoration-none "
-										type="button">İndi al</a></div>
+									<div class="item button-jittery">
+									<a href="./order.html"><button>İndi al</button></a>
+								</div>
 							</td>
 						</tr>
 					</tbody>
@@ -952,7 +960,8 @@
 									</div>
 									<div class="col-6">
 										<div class="item button-jittery">
-											<a href="./order.html" class="text-decoration-none " type="button">İndi al</a>
+											<a href="./order.html" class="text-decoration-none " type="button">İndi
+												al</a>
 										</div>
 									</div>
 								</div>
