--- a/index.html
+++ b/index.html
@@ -547,25 +547,25 @@
 						<div id="number_search" class="my-2 col-lg-4 col-md-10 d-flex justify-content-between">
 							<input type="tel" id="number1" name="number1" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 1);">
+								onkeyup="keyDw(event, 1);">
 							<input type="tel" id="number2" name="number2" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 2);">
+								onkeyup="keyDw(event, 2);">
 							<input type="tel" id="number3" name="number3" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 3);">
+								onkeyup="keyDw(event, 3);">
 							<input type="tel" id="number4" name="number4" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 4);">
+								onkeyup="keyDw(event, 4);">
 							<input type="tel" id="number5" name="number5" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 5);">
+								onkeyup="keyDw(event, 5);">
 							<input type="tel" id="number6" name="number6" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 6);">
+								onkeyup="keyDw(event, 6);">
 							<input type="tel" id="number7" name="number7" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyPr(event, 7);">
+								onkeyup="keyDw(event, 7);">
 						</div>
 						<div class=" my-2 col-lg-2 col-md-6 col-xs-6 w-100">
 							<button type="submit" onclick="alertFunction()"
@@ -662,7 +662,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -704,7 +704,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -732,7 +732,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -761,7 +761,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -798,7 +798,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -826,7 +826,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -854,7 +854,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -887,7 +887,7 @@
 									class="text-decoration-none text-info effect-border ">Reklam
 									et</a></td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -916,7 +916,7 @@
 									et</a>
 							</td>
 							<td class="">
-									<div class="item button-jittery">
+								<div class="item button-jittery">
 									<a href="./order.html"><button>İndi al</button></a>
 								</div>
 							</td>
@@ -1753,7 +1753,7 @@
 		});
 
 		//number-search
-		function keyPr(ev, ind) {
+		function keyDw(ev, ind) {
 			//48 - 0
 			// 8 - backspace
 			//46 - delete
