--- a/index.html
+++ b/index.html
@@ -547,25 +547,25 @@
 						<div id="number_search" class="my-2 col-lg-4 col-md-10 d-flex justify-content-between">
 							<input type="tel" id="number1" name="number1" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 1);">
+								onkeydown="keyPr(event, 1);">
 							<input type="tel" id="number2" name="number2" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 2);">
+								onkeydown="keyPr(event, 2);">
 							<input type="tel" id="number3" name="number3" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 3);">
+								onkeydown="keyPr(event, 3);">
 							<input type="tel" id="number4" name="number4" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 4);">
+								onkeydown="keyPr(event, 4);">
 							<input type="tel" id="number5" name="number5" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 5);">
+								onkeydown="keyPr(event, 5);">
 							<input type="tel" id="number6" name="number6" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 6);">
+								onkeydown="keyPr(event, 6);">
 							<input type="tel" id="number7" name="number7" pattern="[0-9]*" value=""
 								class="number-search inputs inpt2 shadow text-center border rounded" placeholder="X"
-								onkeyup="keyDw(event, 7);">
+								onkeydown="keyPr(event, 7);">
 						</div>
 						<div class=" my-2 col-lg-2 col-md-6 col-xs-6 w-100">
 							<button type="submit" onclick="alertFunction()"
@@ -964,8 +964,7 @@
 									</div>
 									<div class="col-6">
 										<div class="item button-jittery">
-											<a href="./order.html" class="text-decoration-none " type="button">İndi
-												al</a>
+											<a href="./order.html"><button>İndi al</button></a>
 										</div>
 									</div>
 								</div>
@@ -1004,8 +1003,9 @@
 										</div>
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1043,8 +1043,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1083,8 +1084,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1136,8 +1138,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1176,8 +1179,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1216,8 +1220,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1256,8 +1261,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1295,8 +1301,9 @@
 										</div>
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1335,8 +1342,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1375,8 +1383,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1420,8 +1429,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1460,8 +1470,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1500,8 +1511,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1540,8 +1552,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1580,8 +1593,9 @@
 
 									</div>
 									<div class="col-6">
-										<div class="item button-jittery"><a href="./order.html"
-												class="text-decoration-none " type="button">İndi al</a></div>
+										<div class="item button-jittery">
+											<a href="./order.html"><button>İndi al</button></a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -1593,8 +1607,8 @@
 			</div>
 		</div>
 		<div class="d-flex justify-content-center">
-			<nav aria-label="Page navigation example">
-				<ul class="pagination pg-success">
+			<nav aria-label="Page navigation example ">
+				<ul class="pagination pg-success pagination-sm">
 					<li class="page-item">
 						<a class="page-link" aria-label="Previous">
 							<span aria-hidden="true">&laquo;</span>
@@ -1753,10 +1767,12 @@
 		});
 
 		//number-search
-		function keyDw(ev, ind) {
+		function keyPr(ev, ind) {
 			//48 - 0
 			// 8 - backspace
 			//46 - delete
+			var evt = e || window.event;
+
 
 			if ((ev.keyCode > 47 && ev.keyCode < 58) || (ev.keyCode > 95 && ev.keyCode < 106)) {
 				if (ev.keyCode > 47 && ev.keyCode < 58) {
